--- a/index.html
+++ b/index.html
@@ -6,30 +6,33 @@
 
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Outfit&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz@9..144&family=Montserrat&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 
   <title>Frontend Mentor | Product preview card component</title>
 </head>
 <body>
     <div class="card">
       <div class="image"></div>
-      <div>
+      <div class="text-block">
         <h1>Perfume</h1>
 
         <h2>Gabrielle Essence Eau De Parfum</h2>
 
         <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
         Perfumer-Creator for the House of CHANEL.</p>
-
-        <span class="price">$149.99</span>
-        <span class="old-price">$169.99</span>
-
-        <button type="button">Add to Cart</button>
+        <div class="prices">
+          <p class="new-price">$149.99</p>
+          <p class="old-price">$169.99</p>
+        </div>
+        <button type="button"><span class="material-symbols-outlined">
+          shopping_cart
+          </span>Add to Cart</button>
       </div>
     </div>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Jan Kamoń</a>.
     </div>
 </body>
 </html>
